--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-tailwind/react": "0.3.4",
+    "@next-auth/firebase-adapter": "^0.1.3",
+    "firebase": "8.6.2",
     "next": "latest",
+    "next-auth": "^4.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
